Se modifican varios ficheros tras utilizar la herramienta de inspección de código para "mejorar" la calidad del mismo.